fixed footer link placement on smaller devices

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -72,7 +72,7 @@
     }
 }
 
-@media (min-width: 766px) and (max-width: 1200px) {
+@media (min-width: 768px) and (max-width: 1200px) {
     .skill-card {
         margin-top: 25px;
     }
@@ -81,6 +81,16 @@
     }
     .contactForm {
         max-width: 80%;
+    }
+
+    .footer-links {
+        display: flex;
+        justify-content: end;
+    }
+
+    .middle-links {
+        margin-right: 20px;
+        margin-left: 20px;
     }
 }
 
@@ -91,6 +101,15 @@
     .contactForm {
         max-width: 60%;
     }
+    .footer-links {
+        display: flex;
+        justify-content: end;
+    }
+
+    .middle-links {
+        margin-right: 40px;
+        margin-left: 40px;
+    }
 }
 
 @media (min-width: 1400px) {
@@ -100,6 +119,15 @@
 
     .edu-title {
         margin-top: -70px !important;
+    }
+    .footer-links {
+        display: flex;
+        justify-content: end;
+    }
+
+    .middle-links {
+        margin-right: 40px;
+        margin-left: 40px;
     }
 }
   
